agrada imagen a la pagina del navegador

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="icon" href=""> <!--logo de la pag en el navegador-->
+    <link rel="icon" href="https://i.pinimg.com/564x/5a/d6/9e/5ad69e4ae19511d6761fcffb0b48adab.jpg"> <!--logo de la pag en el navegador-->
     <title>Horta Olguin Alejandro</title>
 </head>
 <body>
