actualizacion menor de diseño

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="icon" href="https://i.pinimg.com/564x/5a/d6/9e/5ad69e4ae19511d6761fcffb0b48adab.jpg"> <!--logo de la pag en el navegador-->
+    <link rel="icon" href="https://i.pinimg.com/564x/93/60/6f/93606f4eccf3d4a47aa8f00bf71bddfc.jpg"> <!--logo de la pag en el navegador-->
     <title>Horta Olguin Alejandro</title>
 </head>
 <body>
@@ -78,6 +78,7 @@
     </main>
 
     <h1 class="title">Tecnologías</h1>
+    <hr>
     <main id="skills">
         <article class="card">
             <section class="border">
@@ -147,6 +148,7 @@
     </main>
 
     <h1 class="title">Proyectos</h1>
+    <hr>
     <main id="proyects">
         <a href="https://alehorta.github.io/Challenge-ONE/">
             <article  class="cardProyect">
@@ -196,14 +198,14 @@
         <div id="contactSpace">
             <a class="moveTo" href="https://github.com/AleHorta">
                 <article class="contacts">
-                    <img src="https://i.pinimg.com/564x/00/04/ae/0004ae8de47bb52798b028593b7ac9f5.jpg">
+                    <img src="https://cdn-icons-png.flaticon.com/512/179/179323.png">
                     <p>GitHub</p>
                 </article>
             </a>
     
             <a class="moveTo" href="https://www.linkedin.com/in/alejandro-horta-olguin/">
                 <article class="contacts">
-                    <img src="https://i.pinimg.com/564x/4a/8d/44/4a8d44d6f63a89d7de81add721e7cf22.jpg">
+                    <img src="https://cdn-icons-png.flaticon.com/512/3536/3536505.png">
                     <p>LinkedIn</p>
                 </article>
             </a>
