--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="icon" href="https://i.pinimg.com/564x/93/60/6f/93606f4eccf3d4a47aa8f00bf71bddfc.jpg"> <!--logo de la pag en el navegador-->
+    <link rel="icon" href="friendship.png"> <!--logo de la pag en el navegador-->
     <title>Horta Olguin Alejandro</title>
 </head>
 <body>
@@ -30,7 +30,6 @@
             </section>
         </article>
     </header>
-
     <nav>
         <section id="large">
             <ul id="links">
@@ -57,7 +56,6 @@
             </ul>
         </section>
     </nav>
-
     <main id="aboutMe">
         <img src="https://images.alphacoders.com/740/740330.jpg">
         <section id="aboutMetxt">
@@ -76,7 +74,6 @@
                 </a>
         </section>
     </main>
-
     <h1 class="title">Tecnologías</h1>
     <hr>
     <main id="skills">
@@ -86,7 +83,7 @@
                     <img src="https://cdn-icons-png.flaticon.com/512/2621/2621200.png">
                 </aside>
                 <footer class="foodCardskills">
-                    <span><strong>Intermedio</strong></span>
+                    <span><strong>HTML</strong></span>
                 </footer>
             </section>
         </article>
@@ -97,7 +94,7 @@
                     <img src="https://cdn-icons-png.flaticon.com/512/778/778533.png">
                 </aside>
                 <footer class="foodCardskills">
-                    <span><strong>Intermedio</strong></span>
+                    <span><strong>CSS</strong></span>
                 </footer>
             </section>
         </article>
@@ -108,7 +105,7 @@
                     <img src="https://cdn-icons-png.flaticon.com/512/3344/3344325.png">
                 </aside>
                 <footer class="foodCardskills">
-                    <span><strong>Intermedio</strong></span>
+                    <span><strong>JavaScript</strong></span>
                 </footer>
             </section>
         </article>
@@ -119,7 +116,7 @@
                     <img src="https://cdn-icons-png.flaticon.com/512/1183/1183669.png">
                 </aside>
                 <footer class="foodCardskills">
-                    <span><strong>Intermedio</strong></span>
+                    <span><strong>Java</strong></span>
                 </footer>
             </section>
         </article>
@@ -130,7 +127,7 @@
                     <img src="https://cdn-icons-png.flaticon.com/512/9544/9544010.png">
                 </aside>
                 <footer class="foodCardskills">
-                    <span><strong>Basico</strong></span>
+                    <span><strong>SQL</strong></span>
                 </footer>
             </section>
         </article>
@@ -141,12 +138,21 @@
                     <img src="https://cdn-icons-png.flaticon.com/512/5969/5969170.png">
                 </aside>
                 <footer class="foodCardskills">
-                    <span><strong>Basico</strong></span>
+                    <span><strong>Oracle</strong></span>
+                </footer>
+            </section>
+        </article>
+        <article class="card">
+            <section class="border">
+                <aside class="ofImg">
+                    <img src="https://cdn-icons-png.flaticon.com/512/1183/1183672.png">
+                </aside>
+                <footer class="foodCardskills">
+                    <span><strong>React</strong></span>
                 </footer>
             </section>
         </article>
     </main>
-
     <h1 class="title">Proyectos</h1>
     <hr>
     <main id="proyects">
@@ -163,7 +169,6 @@
                 </footer>
             </article>
         </a>
-
         <a href="https://alehorta.github.io/Pomodoro-Technique/">
             <article  class="cardProyect">
                 <header>
@@ -177,7 +182,6 @@
                 </footer>
             </article>
         </a>
-
         <a href="https://alehorta.github.io/Memorama/">
             <article  class="cardProyect">
                 <header>
@@ -188,6 +192,19 @@
                 </section>
                 <footer class="foodCard">
                     <span><strong>HTML / CSS / JS</strong></span>
+                </footer>
+            </article>
+        </a>
+        <a href="https://alehorta.github.io/Memorama/">
+            <article  class="cardProyect">
+                <header>
+                    <h1>E-commerce</h1>
+                </header>
+                <section class="ofImg">
+                    <img src="https://i.pinimg.com/originals/26/62/f6/2662f641d8fc9c4b06a14c3fb6dcaa0c.gif">
+                </section>
+                <footer class="foodCard">
+                    <span><strong>HTML / CSS</strong></span>
                 </footer>
             </article>
         </a>
