--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="icon" href="friendship.png"> <!--logo de la pag en el navegador-->
+    <link rel="icon" href="digivice.png"> <!--logo de la pag en el navegador-->
     <title>Horta Olguin Alejandro</title>
 </head>
 <body>
