1.- acomodo de los archivos 2.- cambio de typografia 3.- cambio correcto de enlace de proyecto

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="icon" href="digivice.png"> <!--logo de la pag en el navegador-->
+    <link rel="icon" href="../Portafolio/files/digivice.png"> <!--logo de la pag en el navegador-->
     <title>Horta Olguin Alejandro</title>
 </head>
 <body>
     <header id="header">
         <article id="greeting">
-            <img src="files/Mi cara - cv.jpeg" id="myFace">
+            <img src="files/Ale.jpg" id="myFace">
             <section id="greetingTXT">
                 <div id="bounce">
                     <span class="letter">!</span>
@@ -195,7 +195,7 @@
                 </footer>
             </article>
         </a>
-        <a href="https://alehorta.github.io/Memorama/">
+        <a href="https://alehorta.github.io/AluraGeek/">
             <article  class="cardProyect">
                 <header>
                     <h1>E-commerce</h1>
@@ -209,7 +209,6 @@
             </article>
         </a>
     </main>
-
     <footer id="footerPage">
         <h1>Perfiles</h1>
         <div id="contactSpace">
