hidden reack on skills

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </footer>
             </section>
         </article>
-        <article class="card">
+        <!--<article class="card">
             <section class="border">
                 <aside class="ofImg">
                     <img src="https://cdn-icons-png.flaticon.com/512/1183/1183672.png">
@@ -151,7 +151,7 @@
                     <span><strong>React</strong></span>
                 </footer>
             </section>
-        </article>
+        </article>-->
     </main>
     <h1 class="title">Proyectos</h1>
     <hr>
